--- a/app/src/main/res/layout/activity_tournament_view_kgs.xml
+++ b/app/src/main/res/layout/activity_tournament_view_kgs.xml
@@ -494,6 +494,22 @@
         app:layout_constraintWidth_percent="0.2" />
 
     <TextView
+        android:id="@+id/txtGPSNotice"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:text="@string/gps_on"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="@color/clip_blue"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="@id/totalRealWeightKgs"
+        app:layout_constraintBottom_toBottomOf="@id/totalRealWeightKgs"
+        app:layout_constraintEnd_toStartOf="@id/totalRealWeightKgs"
+        android:layout_marginEnd="15dp" />
+
+    <TextView
         android:id="@+id/txtLbHolder"
         android:layout_width="wrap_content"
         android:layout_height="72dp"
