--- a/app/src/main/res/layout/activity_tournament_view_centimeters.xml
+++ b/app/src/main/res/layout/activity_tournament_view_centimeters.xml
@@ -480,6 +480,22 @@
         app:layout_constraintTop_toBottomOf="@id/sixthRealLengthCms" />
 
     <TextView
+        android:id="@+id/txtGPSNotice"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:text="@string/gps_on"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="@color/clip_blue"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="@id/totalRealLengthCms"
+        app:layout_constraintBottom_toBottomOf="@id/totalRealLengthCms"
+        app:layout_constraintEnd_toStartOf="@id/totalRealLengthCms"
+        android:layout_marginEnd="15dp" />
+
+    <TextView
         android:id="@+id/totalRealLengthCms"
         android:layout_width="0dp"
         android:layout_height="0dp"
