--- a/app/src/main/res/layout/list_item_catch.xml
+++ b/app/src/main/res/layout/list_item_catch.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
@@ -6,6 +7,15 @@
     android:padding="8dp"
     android:background="@drawable/box_outline">
 
+    <!-- Pin Icon -->
+
+    <ImageView
+        android:id="@+id/imgGpsPin"
+        android:layout_width="8dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="5dp"
+        android:layout_gravity="center_vertical"
+        android:contentDescription="@string/gps_pin"/>
 
     <ImageView
         android:id="@+id/imgSpeciesListItem"
