--- a/app/src/main/res/layout/activity_all_species_selection.xml
+++ b/app/src/main/res/layout/activity_all_species_selection.xml
@@ -32,6 +32,7 @@
             android:id="@+id/txtSpeciesTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="15dp"
             android:paddingBottom="8dp"
@@ -48,7 +49,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10dp"
             android:paddingBottom="8dp"
-            android:text="@string/user_can_add_your_own_species_to_the_list"
+            android:text="@string/you_can_add_your_own_species_to_the_list"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold" />
@@ -86,43 +87,58 @@
             android:background="@drawable/btn_outline_orange"
             android:enabled="false"
             android:fadeScrollbars="true"
-            android:padding="15dp"
+            android:padding="10dp"
             android:text="@string/save_species_list"
             android:textColor="@color/black"
-            android:textSize="15sp"
+            android:textSize="19sp"
             android:textStyle="bold" />
 
         <!-- Add Custom Species Button -->
 
-        <Button
-            android:id="@+id/btnAddSpeciesToList"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
             android:layout_gravity="center"
-            android:layout_marginTop="12dp"
-            android:background="@drawable/btn_outline_red"
-            android:enabled="false"
-            android:fadeScrollbars="true"
-            android:padding="15dp"
-            android:text="@string/add_species"
-            android:textColor="@color/black"
-            android:textSize="15sp"
-            android:textStyle="bold" />
+            android:gravity="center"
+            android:padding="5dp"
+            android:layout_marginBottom="20dp">
+
+            <Button
+                android:id="@+id/btnCancel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/btn_outline_green"
+                android:padding="10dp"
+                android:text="@string/cancel"
+                android:textColor="@color/black"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="5dp"/>
+
+            <Button
+                android:id="@+id/btnAddSpeciesToList"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="12dp"
+                android:background="@drawable/btn_outline_red"
+                android:enabled="false"
+                android:fadeScrollbars="true"
+                android:padding="10dp"
+                android:text="@string/add_species"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginBottom="5dp"/>
+
+        </LinearLayout>
 
         <!-- CANCEL Button -->
-
-        <Button
-            android:id="@+id/btnCancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/btn_outline_green"
-            android:padding="15dp"
-            android:text="@string/cancel"
-            android:textColor="@color/black"
-            android:textSize="22sp"
-            android:textStyle="bold" />
 
     </LinearLayout>
 
