--- a/app/src/main/res/layout/activity_map_catch_locations.xml
+++ b/app/src/main/res/layout/activity_map_catch_locations.xml
@@ -4,11 +4,12 @@
     android:layout_height="match_parent">
 
     <!-- ✅ The Google Map Fragment -->
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/mapFragment"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
 
     <!-- Filter UI on Bottom of Page -->
     <LinearLayout
