--- a/app/src/main/res/layout/activity_set_up_event.xml
+++ b/app/src/main/res/layout/activity_set_up_event.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,6 +14,21 @@
     tools:context=".SetUpActivity">
 
     <!-- Header Images -->
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0.10"
+        android:scaleY="1.5"
+        android:contentDescription="@string/bass_fighting"
+        android:scrollbarAlwaysDrawVerticalTrack="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:srcCompat="@drawable/bass_jumping_boater_no_backing" />
+
     <ImageView
         android:id="@+id/imgVCC"
         android:layout_width="150dp"
@@ -32,6 +48,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
+        android:contentDescription="@string/img_setup"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imgVCC" >
@@ -43,7 +60,7 @@
             android:layout_height="60dp"
             android:layout_gravity="center"
             android:adjustViewBounds="true"
-            android:contentDescription="@string/select_the_type_of_fishig"
+            android:contentDescription="@string/select_the_type_of_fishing"
             android:scaleX="1.35"
             android:src="@drawable/set_up_word_stoked" />
 
@@ -65,7 +82,7 @@
 
         <!-- Measurement Type Header -->
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/txtTypeOfMeasuring"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
@@ -90,7 +107,8 @@
                 android:background="@color/softlock_green"
                 android:text="@string/weight"
                 android:textColor="@color/black"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="bold"/>
 
             <Button
                 android:id="@+id/btnLength"
@@ -100,7 +118,9 @@
                 android:background="@color/clip_yellow"
                 android:text="@string/length"
                 android:textColor="@color/black"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
         </LinearLayout>
 
         <!-- Type of Units Header -->
@@ -138,9 +158,12 @@
                 android:layout_height="50dp"
                 android:layout_weight="1"
                 android:background="@color/Log_blue_secondary"
+                android:shadowDx="1"
                 android:text="@string/imperial"
                 android:textColor="@color/black"
-                android:textSize="18sp" />
+                android:textColorHighlight="@color/clip_white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/btnMetric"
@@ -150,7 +173,8 @@
                 android:background="@color/bright_green"
                 android:text="@string/metric"
                 android:textColor="@color/black"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="bold"/>
 
         </LinearLayout>
         <LinearLayout
@@ -188,7 +212,8 @@
                 android:background="@color/clip_orange"
                 android:text="@string/fun_day"
                 android:textColor="@color/black"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="bold"/>
 
             <Button
                 android:id="@+id/btnTournament"
@@ -199,7 +224,8 @@
                 android:drawableBottom="@drawable/button_outline"
                 android:text="@string/tournament"
                 android:textColor="@color/black"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="bold"/>
 
         </LinearLayout>
 
@@ -224,7 +250,7 @@
             <!--Tournament Limit Marker Set Up  -->
 
             <TextView
-                android:id="@+id/txtLimit_Marker"
+                android:id="@+id/txtLimitMarker"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -233,7 +259,7 @@
                 android:gravity="center"
                 android:text="@string/culling_limit"
                 android:textColor="@color/black"
-                android:textSize="26sp"
+                android:textSize="22sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -253,7 +279,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/tournament_species"
                 android:textColor="@color/black"
-                android:textSize="26sp"
+                android:textSize="22sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -311,17 +337,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:layout_marginTop="2dp"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="horizontal" >
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/log_catch_location"
                 android:textColor="@color/black"
-                android:textSize="25sp"
+                android:textSize="22sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -339,21 +364,19 @@
                 android:id="@+id/tglGPS"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
                 android:background="@drawable/btn_outline_red"
                 android:contentDescription="@string/gps_info"
                 android:fontFamily="sans-serif-medium"
-                android:layout_marginStart="10dp"
                 android:paddingStart="24dp"
-                android:paddingTop="10dp"
+                android:paddingTop="5dp"
                 android:paddingEnd="24dp"
-                android:paddingBottom="12dp"
+                android:paddingBottom="5dp"
                 android:textColor="@color/black"
                 android:textOff="@string/disabled"
                 android:textOn="@string/enabled"
-                android:textSize="22sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
-
-
 
 
         </LinearLayout>
@@ -406,6 +429,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:layout_marginBottom="25dp"
             android:gravity="center"
             android:orientation="horizontal" >
 
