--- a/app/src/main/res/layout/popup_phrase_list_statues.xml
+++ b/app/src/main/res/layout/popup_phrase_list_statues.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/very_lite_grey"
+    android:background="@color/material_dynamic_neutral90"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:paddingStart="8dp"
@@ -21,11 +21,11 @@
         android:id="@+id/txtPhraseText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/say_the_key_words"
+        android:padding="10dp"
+        android:text="@string/say_the_words"
         android:textColor="#000000"
         android:textSize="20sp"
-        android:textStyle="bold"
-        android:padding="10dp"/>
+        android:textStyle="bold" />
 
 
 </LinearLayout>
